# zedwelcome

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/welcome/: Cargo.toml
crates/welcome/src/: welcome.rs
