[workspace]
members = ["crates/picker", "crates/tab_switcher"]
resolver = "2"

[workspace.dependencies]
#
# Workspace member crates
#

picker = { path = "crates/picker" }
tab_switcher = { path = "crates/tab_switcher" }

anyhow = "1.0.86"
collections = { git = "https://github.com/zed-industries/zed.git" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
menu = { git = "https://github.com/zed-industries/zed.git" }
serde = { version = "1.0", features = ["derive", "rc"] }
ui = { git = "https://github.com/zed-industries/zed.git" }
util = { git = "https://github.com/zed-industries/zed.git" }
workspace = { git = "https://github.com/zed-industries/zed.git" }
