[workspace]
members = ["crates/picker", "crates/tab_switcher", "crates/welcome"]
resolver = "2"

[workspace.dependencies]
#
# Workspace member crates
#

picker = { path = "crates/picker" }
tab_switcher = { path = "crates/tab_switcher" }
welcome = { path = "crates/welcome" }

anyhow = "1.0.86"
client = { git = "https://github.com/zed-industries/zed.git" }
collections = { git = "https://github.com/zed-industries/zed.git" }
db = { git = "https://github.com/zed-industries/zed.git" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
menu = { git = "https://github.com/zed-industries/zed.git" }
schemars = { version = "0.8", features = ["impl_json_schema"] }
serde = { version = "1.0", features = ["derive", "rc"] }
settings = { git = "https://github.com/zed-industries/zed.git" }
theme_selector = { git = "https://github.com/zed-industries/zed.git" }
ui = { git = "https://github.com/zed-industries/zed.git" }
util = { git = "https://github.com/zed-industries/zed.git" }
workspace = { git = "https://github.com/zed-industries/zed.git" }
