[package]
name = "welcome-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
anyhow.workspace = true
rust-embed = "8"
log.workspace = true
settings.workspace = true
workspace.workspace = true
ui.workspace = true
serde.workspace = true
tab_switcher.workspace = true
welcome.workspace = true
